Nueva seccion en index.html
Se agrego la descripcion de como agregar colaboradores a un repositorio

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
   <h1>Pagina en colaboracion</h1>
+
+  <h2>Como agregar colaboradores a un repo en GitHub</h2>
+
+  <p>Ir a "setting" y seleccionar "colaboradores" en el panel de la izquierda, despues agregar por nombre de usuario</p>
   
 </body>
 </html>
